[gd_scene load_steps=16 format=1]

[ext_resource path="res://scripts/game.gd" type="Script" id=1]
[ext_resource path="res://fonte/Austrise.fnt" type="BitmapFont" id=2]
[ext_resource path="res://fonte/bandmess.fnt" type="BitmapFont" id=3]
[ext_resource path="res://assets/progress_bottom.png" type="Texture" id=4]
[ext_resource path="res://assets/progress_up.png" type="Texture" id=5]
[ext_resource path="res://assets/btn_nao_solto.png" type="Texture" id=6]
[ext_resource path="res://assets/btn_nao_press.png" type="Texture" id=7]
[ext_resource path="res://assets/btn_sim_solto.png" type="Texture" id=8]
[ext_resource path="res://assets/btn_sim_press.png" type="Texture" id=9]
[ext_resource path="res://assets/btn_voltar.png" type="Texture" id=10]
[ext_resource path="res://assets/btn_voltar_press.png" type="Texture" id=11]
[ext_resource path="res://sons/erro.ogg" type="AudioStream" id=12]
[ext_resource path="res://sons/acerto.ogg" type="AudioStream" id=13]
[ext_resource path="res://sons/trilha.ogg" type="AudioStream" id=14]

[sub_resource type="Animation" id=1]

length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("TUTORIAL/texto:rect/scale")
tracks/0/interp = 2
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.5, 1.5 ), Vector2( 1.5, 2 ) ]
}

[node name="game" type="Node"]

script/script = ExtResource( 1 )

[node name="ColorFrame" type="ColorFrame" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 720.0
margin/bottom = 1080.0
color = Color( 1, 1, 1, 1 )

[node name="texto" type="Label" parent="."]

rect/scale = Vector2( 1.5, 1.61904 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 90.0
margin/top = 520.0
margin/right = 450.0
margin/bottom = 567.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.0156863, 0.0156863, 0.937255, 1 )
text = "werwer"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="maxScore" type="Label" parent="."]

rect/scale = Vector2( 1.5, 1.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 90.0
margin/top = 270.0
margin/right = 450.0
margin/bottom = 317.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.117647, 0.117647, 0.117647, 1 )
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="score" type="Label" parent="."]

rect/scale = Vector2( 1.5, 1.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 330.0
margin/top = 30.0
margin/right = 570.0
margin/bottom = 77.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.580392, 0.580392, 0.580392, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
align = 2
valign = 1
autowrap = true
clip_text = true
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = true

[node name="ProgressBar" type="TextureProgress" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 110.0
margin/top = 650.0
margin/right = 619.0
margin/bottom = 699.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 1.0
range/value = 0.0
range/exp_edit = false
range/rounded = true
texture/under = ExtResource( 4 )
texture/over = null
texture/progress = ExtResource( 5 )
radial_fill/fill_degrees = 360.0
radial_fill/center_offset = Vector2( 0, 0 )

[node name="btn_nao" type="TouchScreenButton" parent="."]

transform/pos = Vector2( 100, 810 )
normal = ExtResource( 6 )
pressed = ExtResource( 7 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="btn_sim" type="TouchScreenButton" parent="."]

transform/pos = Vector2( 440, 810 )
normal = ExtResource( 8 )
pressed = ExtResource( 9 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="btn_voltar" type="TouchScreenButton" parent="."]

process/pause_mode = 2
transform/pos = Vector2( 30, 30 )
transform/scale = Vector2( 0.7, 0.7 )
normal = ExtResource( 10 )
pressed = ExtResource( 11 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="erro" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 12 )
stream/play = false
stream/loop = false
stream/volume_db = 8.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="acerto" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 13 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="musica" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 14 )
stream/play = false
stream/loop = true
stream/volume_db = 5.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="Sprite" type="Sprite" parent="."]

transform/pos = Vector2( 360, 300 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

process/pause_mode = 2
playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/GameOver = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[connection signal="pressed" from="btn_nao" to="." method="_on_btn_nao_pressed"]

[connection signal="pressed" from="btn_sim" to="." method="_on_btn_sim_pressed"]

[connection signal="pressed" from="btn_voltar" to="." method="_on_btn_voltar_pressed"]


